[project]
name = "cippy"
version = "0.0.0"
description = "A pure Python EtherNet/IP library"
readme = "README.md"
authors = [
    { name = "io", email = "ian@ottoway.dev" }
]
requires-python = ">=3.12"
dependencies = []


[tool.ruff]
line-length = 120


[dependency-groups]
dev = [
    'ruff',
    "pyright",
    'rich'
]
test = [
    'pytest',
    'pytest-pretty',
    'pytest-mock',
]

[tool.uv]
check-url = "https://pypi.org/simple"


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
publish-url = "https://test.pypi.org/legacy/"
explicit = true